[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dnf-photoz"
version = "0.1.0"
description = "Directional Neighbourhood Fitting (DNF) as a standalone Python module."
readme = "README.md"
authors = [{ name = "DNF contributors" }]
keywords = ["astronomy", "photometric redshift", "machine learning"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scikit-learn",
    "astropy"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ltoribiosc/DNF_photoz"
Issues = "https://github.com/ltoribiosc/DNF_photoz/issues"

[tool.setuptools]
py-modules = ["dnf"]

[tool.hatch.build]
# Build defaults (wheel + sdist)
